--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,8 @@ body div#wall .parent #tag-5.slick {
 }
 
 body div#wall div.parent div:last-child div#tag-6 {
-  display:none;
+  display: none;
 }
-
+body div#wall div.parent div > #tag-7.slick{
+  display: none;
+}
